@@ -3,5 +3,3 @@
  * gsalliere
  * check movements
  * support adjusted scores
- * support b33r card
- * --setsize parameter to check sets of n boards per round for matching pair numbers
